# estuda-ia

./: .gitignore  00-Dataset.ipynb  01 - Teste em Modelos Locais.ipynb  01-2-Predicts-views.ipynb  01-Predict.ipynb  01.1 - Local Predict.ipynb  01.2 - Local Predict Results.ipynb  02 - Teste em Modelos via API.ipynb  03 - Encontrando Habilidades.ipynb  README.md  gemini.ipynb  install_genai.txt  normalize_predictions.ipynb  predict.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
app/: __main__.py  home.py  mvp.py  n01_dataset.py  n02_local.py  n03_online.py  n04_fine.py
app/backend/: app.py  models.py  schemas.py
app/streamlit/: __main__.py  home.py  mvp.py  n01_dataset.py  n02_local.py  n03_online.py  (+1 more)
data/: questoes copy.json
models/: chat.py  questions.py
models_help/: build.py  habilities.py  runner.py
notebooks/: 03 - Encontrando Habilidades.ipynb  04 - Encontrando Habilidades.ipynb  1 - Coleta e Processamento dos Dados.ipynb  2 - Avaliação de Modelos Locais.ipynb  3 - Avaliação de Modelos via API.ipynb  4 - Encontrando Habilidades.ipynb  5 - Avaliando novos Modelos.ipynb
ollama_help/: __init__.py  build.py  runner.py
predict_data/: answ-multi.json  answ-vision.json  context_predictions.json  correct_context.json  full-multi.json  full-vision.json  multi_models_context_prediction.json  new_text_predictions.json  qwen_context_predictions.json  reasoning_predictions.json  short_text_predictions.json
questoes/: new_questions.json  questoes.json
utils/: __init__.py  models_info.py  plots.py  setup.py
(+14 files in other folders)
